2006-03-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ServletWorkerRequest.jvm.cs: fixed ctor, UrlDecode applied on 
	requested url
	fixed GetRawUrl, removed protocol, hostname and port
	fixed GetUriPath, _requestUri is always initialized

2006-03-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationHost.cs: ShadowCopyDirectories is not a URL. Set
	PrivateBinPath to the same value.

2006-03-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BareApplicationHost.cs: initialize paths from AppDomain data. New
	GetCodeGenDir().
	* ApplicationHost.cs: in 2.0 the physical path is turned into an
	absolute path.

2006-02-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationManager.cs: new internal method to create/reuse a
	BareApplicationHost from ClientBuildManager.

2006-02-28  Chris Toshok  <toshok@ximian.com>

	* IAppDomainFactory.cs: corcompare work.

	* IAppManagerAppDomainFactory.cs: same

	* IISAPIRuntime.cs: same.

2006-02-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationManager.cs: implemented ShutdownAll().
	* HostingEnvironment.cs: remove MonoTODO.

2006-02-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BareApplicationHost.cs: class used as an entry point into each
	application domiain from the ApplicationManager.
	* ApplicationManager.cs: implemented most of the remaining methods.
	* HostingEnvironment.cs: object handling methods are now implemented.

2006-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DefaultVirtualPathProvider.cs: add some comments/TODO.
	* HostingEnvironment.cs: initialize the default value for
	VirtualPathProvider.

2006-02-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HostingEnvironment.cs: MapPath is done.

2006-02-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DefaultVirtualDirectory.cs: implemented missing bits.
	* DefaultVirtualFile.cs: fix ctor scope.
	* DefaultVirtualPathProvider.cs: implemented GetFile and GetDirectory.
