@@ -1,3 +1,8 @@
+2006-03-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* SimpleWorkerRequest.cs: use UrlUtils instead of Path. Several fixes
+	to make PathInfo + SimpleWorkerRequest work as in MS.
+
 2006-03-15  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* ServletWorkerRequest.jvm.cs: fixed ctor, UrlDecode applied on 
